kubernetes/infrastructure/harbor/release.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
